--- a/src/main/java/Interfaz/JFrameTramitar.form
+++ b/src/main/java/Interfaz/JFrameTramitar.form
@@ -64,7 +64,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/logo_secretarias_bn (1).png"/>
+                  <Image iconType="3" name="/iconos/sonoraLogoImagen.png"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -108,7 +108,7 @@
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/WhatsApp Image 2024-03-20 at 01.44.18.jpeg"/>
+                  <Image iconType="3" name="/iconos/fondoImagen.jpeg"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -165,9 +165,6 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="20" style="1"/>
                 </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="0" green="0" red="0" type="rgb"/>
-                </Property>
                 <Property name="text" type="java.lang.String" value="&#xbf;Que desea tramitar?"/>
               </Properties>
               <Constraints>
@@ -179,7 +176,7 @@
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/Imagegen (2).jpg"/>
+                  <Image iconType="3" name="/iconos/licenciaImagen.jpg"/>
                 </Property>
               </Properties>
               <Events>
@@ -194,7 +191,7 @@
             <Component class="javax.swing.JLabel" name="jLabel6">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/Imagegen (1) (1).jpg"/>
+                  <Image iconType="3" name="/iconos/placaImagen.jpg"/>
                 </Property>
               </Properties>
               <Events>
@@ -244,9 +241,6 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="jLabel7">
                   <Properties>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="0" green="0" red="0" type="rgb"/>
-                    </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
                     <Property name="text" type="java.lang.String" value="Placas"/>
                   </Properties>
@@ -299,9 +293,6 @@
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="0" red="66" type="rgb"/>
-                    </Property>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="0" green="0" red="0" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
                     <Property name="text" type="java.lang.String" value="Licencias"/>
