--- a/src/main/java/Interfaz/JFrameInicio.form
+++ b/src/main/java/Interfaz/JFrameInicio.form
@@ -70,7 +70,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/logo_secretarias_bn (1).png"/>
+                  <Image iconType="3" name="/iconos/sonoraLogoImagen.png"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -114,7 +114,7 @@
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/iconos/WhatsApp Image 2024-03-20 at 01.44.18.jpeg"/>
+                  <Image iconType="3" name="/iconos/fondoImagen.jpeg"/>
                 </Property>
               </Properties>
               <Constraints>
